# invite-me

./: .gitignore  README.md  docker-compose.coolify.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
.claude/: settings.json
backend/: .dockerignore  .env.example  Dockerfile  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/apps/accounts/: adapters.py  admin.py  emails.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_user_deleted_at.py
backend/apps/administration/: apps.py  urls.py  views.py
backend/apps/billing/: admin.py  apps.py  constants.py  entitlements.py  models.py  serializers.py  services.py  urls.py  views.py  webhooks.py
backend/apps/billing/migrations/: 0001_initial.py  0002_eventpurchase_kind_alter_eventpurchase_capacity.py  0003_subscriptionplan_name.py
backend/apps/common/: emails.py  permissions.py
backend/apps/events/: admin.py  emails.py  models.py  serializers.py  urls.py  views.py
backend/apps/events/migrations/: 0001_initial.py  0002_eventlink.py
backend/apps/gifts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/gifts/migrations/: 0001_initial.py
backend/apps/invitations/: admin.py  apps.py  imports.py  models.py  serializers.py  urls.py  views.py
backend/apps/invitations/migrations/: 0001_initial.py
backend/apps/rsvps/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py
(+193 files in other folders)
